test/pending/pos/t1131.scala
trait A { self: Any { def p: Any } =>
  def f(b: => Unit) {}
  f { p }
}
